[package]
name = "proc-macros"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proc-macros"
path = "main.rs"

[dependencies]
concat-idents = { path = "concat-idents" }
log-attributes = { path = "log-attributes" }

derive_builder = { path = "builder" }
seq = { path = "seq" }
sorted = { path = "sorted" }

log = "0.4.14"
